# amazing-marvin-mcp

./: .env.example  .gitignore  marvin.py  pullenv  pyproject.toml
src/amazing_marvin_mcp/: adapter.py  descriptions.py  marvin.py  server.py
